# game-life-wgpu

./: Cargo.toml  README.md
src/: framework.rs  life.rs  life.wgsl  life_params.rs  main.rs  reference.rs  render.rs  render.wgsl  texture.rs
