[package]
name = "game-life-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.27.5"
env_logger = "0.9"
log = "0.4"
pollster = "0.2.5"
wgpu = "0.14"
bytemuck = { version = "1.4", features = ["derive"]}
anyhow = "1.0"
rand = "0.8.5"
async-executor = "1.4.1"
